--- a/Campaign main page.html
+++ b/Campaign main page.html
@@ -1,101 +1,75 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
   <title>Sorcery Schism</title>
   <link rel="icon" type="image/x-icon" href="///C:\Users\Justin\Desktop\Campaign Website\sorcery schism icon.jpg">
   <link rel="stylesheet" href="./Campaign%20Styles.css" type="text/css">
 </head>
 
-<style>
-
-
-
-</style>
-
 
 <body>
- <h1><center>Sorcery Schism</h1>
+<ul class="a">
+  <li><a href="#">Home</a></li>
+  <li class="dropdown">
+    <a href="javascript:void(0)" class="dropbtn">World</a>
+      <div class="dropdown-content">
+        <a href="#">Background</a>
+        <a href="#">Culture</a>
+        <a href="#">History</a>
+        <a href="#">Lore</a>
+        <a href="#">Map</a>
+      </div>
+    </li>
+  <li class="dropdown">
+    <a href="javascript:void(0)" class="dropbtn">Party</a>
+      <div class="dropdown-content">
+        <a href="#">AJ</a>
+        <a href="#">Dan</a>
+        <a href="#">Jared</a>
+        <a href="#">Jimmy</a>
+        <a href="#">Lance</a>
+      </div>
+    </li>
+    <li><a href="Notebook.html">Notebook</a></li>
+    <li><a href="Job Board.html">Job Board</a></li>
+    <li><a href="Glossary.html">Glossary</a></li>
+  </ul>
 
-<table>
- <tr>
-   <div class="column menu">
-    <ul class="nopadding">
-      <li><a href="Campaign main page.html">Home</a></li>
-      <li><a href="World Page.html">World</a></li>        
-      <li><a href="Party Page.html">Party</a></li>
-      <li><a href="Notebook.html">Notebook</a></li>
-      <li><a href="Job Board.html">Job Board</a></li>
-      <li><a href="Glossary.html">Glossary</a></li>
-      </ul>
-</div>
+<h2>The Story...</h2>
 
-
-<div class="column content story">
-  <h2 >&emsp;The story...</h2>
-  <p class="a">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Bibendum neque egestas congue quisque egestas diam in arcu. Risus quis varius quam quisque. Enim eu turpis egestas pretium aenean pharetra magna. Curabitur vitae nunc sed velit dignissim sodales ut eu. Sagittis nisl rhoncus mattis rhoncus. Dignissim sodales ut eu sem integer vitae justo eget magna. Iaculis nunc sed augue lacus viverra vitae congue eu consequat. Consectetur adipiscing elit pellentesque habitant morbi tristique senectus et. Et leo duis ut diam quam nulla porttitor massa. Sed ullamcorper morbi tincidunt ornare massa eget egestas. Eleifend donec pretium vulputate sapien nec sagittis aliquam. Adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus. At quis risus sed vulputate odio ut enim blandit. Justo donec enim diam vulputate ut pharetra. Urna nec tincidunt praesent semper feugiat nibh sed.
+<div class="story">
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Bibendum neque egestas congue quisque egestas diam in arcu. Risus quis varius quam quisque. Enim eu turpis egestas pretium aenean pharetra magna. Curabitur vitae nunc sed velit dignissim sodales ut eu. Sagittis nisl rhoncus mattis rhoncus. Dignissim sodales ut eu sem integer vitae justo eget magna. Iaculis nunc sed augue lacus viverra vitae congue eu consequat. Consectetur adipiscing elit pellentesque habitant morbi tristique senectus et. Et leo duis ut diam quam nulla porttitor massa. Sed ullamcorper morbi tincidunt ornare massa eget egestas. Eleifend donec pretium vulputate sapien nec sagittis aliquam. Adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus. At quis risus sed vulputate odio ut enim blandit. Justo donec enim diam vulputate ut pharetra. Urna nec tincidunt praesent semper feugiat nibh sed.
 <br><br>
 Velit euismod in pellentesque massa placerat duis. Non tellus orci ac auctor augue mauris augue. Augue eget arcu dictum varius. Ac auctor augue mauris augue. Ullamcorper sit amet risus nullam eget felis eget. Odio ut sem nulla pharetra diam sit amet nisl suscipit. Accumsan sit amet nulla facilisi. Egestas diam in arcu cursus euismod quis viverra nibh. Mattis rhoncus urna neque viverra justo nec ultrices. Convallis convallis tellus id interdum velit laoreet. Nulla facilisi nullam vehicula ipsum a arcu. Odio ut sem nulla pharetra diam sit amet nisl suscipit.
 <br><br>
-Lacus suspendisse faucibus interdum posuere lorem ipsum dolor sit amet. Viverra aliquet eget sit amet tellus cras adipiscing. Id velit ut tortor pretium viverra suspendisse potenti. Sagittis orci a scelerisque purus semper eget duis at tellus. Neque vitae tempus quam pellentesque nec nam aliquam sem. Convallis aenean et tortor at risus viverra. Vitae justo eget magna fermentum iaculis eu. Sagittis vitae et leo duis ut diam quam nulla porttitor. Dictum fusce ut placerat orci nulla pellentesque dignissim enim sit. Malesuada fames ac turpis egestas integer eget. Convallis posuere morbi leo urna molestie at elementum eu. Porttitor eget dolor morbi non arcu risus quis. Consequat semper viverra nam libero justo. Turpis egestas sed tempus urna et pharetra pharetra massa. Fames ac turpis egestas sed tempus urna et pharetra. Diam volutpat commodo sed egestas egestas fringilla phasellus faucibus scelerisque. Cursus vitae congue mauris rhoncus aenean vel. Fermentum posuere urna nec tincidunt praesent semper feugiat nibh. Quis enim lobortis scelerisque fermentum dui faucibus in ornare. Integer quis auctor elit sed vulputate mi sit amet mauris.</div>
-</div>
-</tr>
-
-<tr> 
-  <div class="column announcement a"><u><b>Announcements</b></u>
-    <ul> 
-      <li>Next Session is: 1:55 PM 6/28/2024 </li>
-      <li>Scheduled to take off 7/3/2024 due to the holiday</li>
-      <li>Don't forget to level up</li>
-      <li>Don't forget to bring a towel!</li>
-    </ul>
-  </div>
-  <div class="column gap"></div>
-  <div class="column announcement a"><u><b>Recap</b></u>
-    <p><em>Previously on Varsity blues...</em>     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-  </div>
-</tr>
-<div class="column cushion"></div>
-<tr>
-
-  <div class="column stats a"><center><b><u>Stats</b></u></center>
-  <p><em>Jimmy rolled 145 Natural 1's because he sucks at TTRPGs</em></div>
-</tr>
-</table>
-</div>
-<div class="column cushion">
-<p><center><a class="email" href="mailto:juseipel43@gmail.com">Questions or Comments?</a>
-
+Lacus suspendisse faucibus interdum posuere lorem ipsum dolor sit amet. Viverra aliquet eget sit amet tellus cras adipiscing. Id velit ut tortor pretium viverra suspendisse potenti. Sagittis orci a scelerisque purus semper eget duis at tellus. Neque vitae tempus quam pellentesque nec nam aliquam sem. Convallis aenean et tortor at risus viverra. Vitae justo eget magna fermentum iaculis eu. Sagittis vitae et leo duis ut diam quam nulla porttitor. Dictum fusce ut placerat orci nulla pellentesque dignissim enim sit. Malesuada fames ac turpis egestas integer eget. Convallis posuere morbi leo urna molestie at elementum eu. Porttitor eget dolor morbi non arcu risus quis. Consequat semper viverra nam libero justo. Turpis egestas sed tempus urna et pharetra pharetra massa. Fames ac turpis egestas sed tempus urna et pharetra. Diam volutpat commodo sed egestas egestas fringilla phasellus faucibus scelerisque. Cursus vitae congue mauris rhoncus aenean vel. Fermentum posuere urna nec tincidunt praesent semper feugiat nibh. Quis enim lobortis scelerisque fermentum dui faucibus in ornare. Integer quis auctor elit sed vulputate mi sit amet mauris.
 </div>
 
+<div class="boxcontainer">
+<div class="box">Announcements
+  <ul class="b">
+    <li>Next Session: 10:41 AM 7/15/2024</li>
+    <li>Jimmy is a nerd</li>
+    <li>The world is ending</li>
+  </ul>
+</div>
 
+<div class="box">Things to Remember
+  <ul class="b">
+    <li>Next session 10:43 AM 7/15/2024</li>
+    <li>Jimmy is a nerd</li>
+    <li>the world is ending</li>
+  </ul>
+</div>
+</div>
 
+<div class="stats">Stats for nerds</div>
 
-
-
-
-
-
-
-
-
-
-<script>
-
-function toggleWorldList() {
-  var worldList = document.getElementById("worldlist");
-  worldList.classList.toggle("worldlist"); // Toggles the 'partylist' class
-}
-
-
-
-function togglePartyList() {
-  var partyList = document.getElementById("partylist");
-  partyList.classList.toggle("partylist"); // Toggles the 'partylist' class
-}
-
-
-</script>
 </body>
+
+<footer style="color: white; text-slign: center">Questions? Concerns? Issues? Contact me at <a style="color: crimson" href="mailto: juseipel43@gmail.com">juseipel43@gmail.com</a>
+</footer>
 
 </html>
