Update Campaign main page.html

--- a/Campaign main page.html
+++ b/Campaign main page.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
   <title>Sorcery Schism</title>
-  <link rel="icon" type="image/x-icon" href="///C:\Users\Justin\Desktop\Campaign Website\sorcery schism icon.jpg">
+  <link rel="icon" type="image/x-icon" href="./sorcery schism icon.jpg">
   <link rel="stylesheet" href="./Campaign%20Styles.css" type="text/css">
 </head>
 
