--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<h1>Hello World!</h1>
-
-
-<a href="./Campaign main page.html">Click here</a>
+<head>
+<meta http-equiv='refresh' content='0; URL=./Campaign main page.html'>
+</head>
