--- a/Campaign main page.html
+++ b/Campaign main page.html
@@ -25,11 +25,11 @@
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Party</a>
       <div class="dropdown-content">
-        <a href="#">AJ</a>
-        <a href="#">Dan</a>
-        <a href="#">Jared</a>
-        <a href="#">Jimmy</a>
-        <a href="#">Lance</a>
+        <a href="https://www.dndbeyond.com/characters/92756884">AJ</a>
+        <a href="https://www.dndbeyond.com/characters/90103582">Dan</a>
+        <a href="https://www.dndbeyond.com/characters/98863520">Jared</a>
+        <a href="https://www.dndbeyond.com/characters/91149633">Jimmy</a>
+        <a href="https://www.dndbeyond.com/characters/41845389">Lance</a>
       </div>
     </li>
     <li><a href="Notebook.html">Notebook</a></li>
