--- a/Campaign main page.html
+++ b/Campaign main page.html
@@ -25,16 +25,16 @@
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Party</a>
       <div class="dropdown-content">
-        <a href="https://www.dndbeyond.com/characters/92756884">AJ</a>
-        <a href="https://www.dndbeyond.com/characters/90103582">Dan</a>
-        <a href="https://www.dndbeyond.com/characters/98863520">Jared</a>
-        <a href="https://www.dndbeyond.com/characters/91149633">Jimmy</a>
-        <a href="https://www.dndbeyond.com/characters/41845389">Lance</a>
+        <a href="https://www.dndbeyond.com/characters/92756884" target="_blank">AJ</a>
+        <a href="https://www.dndbeyond.com/characters/90103582"target="_blank">Dan</a>
+        <a href="https://www.dndbeyond.com/characters/98863520"target="_blank">Jared</a>
+        <a href="https://www.dndbeyond.com/characters/91149633"target="_blank">Jimmy</a>
+        <a href="https://www.dndbeyond.com/characters/128274718/builder"target="_blank">Lance</a>
       </div>
     </li>
-    <li><a href="Notebook.html">Notebook</a></li>
-    <li><a href="Job Board.html">Job Board</a></li>
-    <li><a href="Glossary.html">Glossary</a></li>
+    <li><a href="./Notebook.html">Notebook</a></li>
+    <li><a href="./Job Board.html">Job Board</a></li>
+    <li><a href="./Glossary.html">Glossary</a></li>
   </ul>
 
 <h2>The Story...</h2>
