--- a/Notebook.html
+++ b/Notebook.html
@@ -1,4 +1,41 @@
-<html>
+<!DOCTYPE html>
+<html lang="en-US">
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
+  <title>Sorcery Schism</title>
+  <link rel="icon" type="image/x-icon" href="./sorcery schism icon.jpg">
+  <link rel="stylesheet" href="./Campaign%20Styles.css" type="text/css">
+</head>
+
+
+<body>
+<ul class="a">
+  <li><a href="#">Home</a></li>
+  <li class="dropdown">
+    <a href="javascript:void(0)" class="dropbtn">World</a>
+      <div class="dropdown-content">
+        <a href="#">Background</a>
+        <a href="#">Culture</a>
+        <a href="#">History</a>
+        <a href="#">Lore</a>
+        <a href="#">Map</a>
+      </div>
+    </li>
+  <li class="dropdown">
+    <a href="javascript:void(0)" class="dropbtn">Party</a>
+      <div class="dropdown-content">
+        <a href="https://www.dndbeyond.com/characters/92756884" target="_blank">AJ</a>
+        <a href="https://www.dndbeyond.com/characters/90103582"target="_blank">Dan</a>
+        <a href="https://www.dndbeyond.com/characters/98863520"target="_blank">Jared</a>
+        <a href="https://www.dndbeyond.com/characters/91149633"target="_blank">Jimmy</a>
+        <a href="https://www.dndbeyond.com/characters/128274718/builder"target="_blank">Lance</a>
+      </div>
+    </li>
+    <li><a href="./Notebook.html">Notebook</a></li>
+    <li><a href="./Job Board.html">Job Board</a></li>
+    <li><a href="./Glossary.html">Glossary</a></li>
+  </ul>
 <h1> Notebook</h1>
 
 <body>
@@ -11,5 +48,53 @@
   <li>link to a help page</li>
 </ul>
 
+
+<div class="box">Loot
+  <ul style="list-style-type: none">
+    <li>Platinum</li>
+    <li>Gold</li>
+    <li>Electrum</li>
+    <li>Silver</li>
+    <li>Copper</li>
+  </ul>
+</div>
+
+<div class="box">Gems
+ <ul style="list-style-type: none">
+    <li>list</li>
+    <li>of</li>
+    <li>different</li>
+    <li>gemstones</li>
+    <li>and value(s)</li>
+  </ul>
+</div>
+
+
+<label for="journalentry">Journal Entry: </label>
+<br>
+<textarea class="journal" id="journalentry" name="journalentry" rows="8" cols="150">
+Adventurer... enter your tales of greatness here...
+</textarea><br>
+<button id="submit">Submit your notes</button	
+<br>
+
+<div class="box">
+<h4>Previous entries</h4>
+  <ul>
+    <li><a href="#">1:10 PM 7/15/2024</li>
+    <li><a href="#">1:10 PM 7/15/2024</li>
+    <li><a href="#">1:10 PM 7/15/2024</li>
+    <li><a href="#">1:10 PM 7/15/2024</li>
+    <li><a href="#">1:10 PM 7/15/2024</li>
+  </ul>
+</div>
+<div class="box">
+<h4>Helpful links</h4>
+  <ul>
+    <li><a href="./Glossary.html">Glossary</li>
+    <li><a href="./world background.html">World > Background</li>
+    <li><a href="./job board.html">Job Board</li>
+  </ul>
+</div>
 </body>
 </html>
