--- a/Notebook.html
+++ b/Notebook.html
@@ -72,8 +72,7 @@
 
 <label for="journalentry">Journal Entry: </label>
 <br>
-<textarea class="journal" id="journalentry" name="journalentry" rows="8" cols="150">
-Adventurer... enter your tales of greatness here...
+<textarea class="journal" id="journalentry" name="journalentry" rows="8" cols="150" placeholder="Adventurer... enter your tales of greatness here...">
 </textarea><br>
 <button id="submit">Submit your notes</button	
 <br>
