--- a/Notebook.html
+++ b/Notebook.html
@@ -69,31 +69,32 @@
   </ul>
 </div>
 
-
 <label for="journalentry">Journal Entry: </label>
 <br>
 <textarea class="journal" id="journalentry" name="journalentry" rows="8" cols="150" placeholder="Adventurer... enter your tales of greatness here...">
 </textarea><br>
-<button id="submit">Submit your notes</button	
+<button id="submit">Submit your notes</button>	
+
 <br>
 
-<div class="box">
-<h4>Previous entries</h4>
-  <ul>
-    <li><a href="#">1:10 PM 7/15/2024</li>
-    <li><a href="#">1:10 PM 7/15/2024</li>
-    <li><a href="#">1:10 PM 7/15/2024</li>
-    <li><a href="#">1:10 PM 7/15/2024</li>
-    <li><a href="#">1:10 PM 7/15/2024</li>
+<div class="box">Previous Entries
+  <ul style="list-style-type: none">
+    <li><a href="#">11:34 AM 7/17/2024</a></li>
+    <li><a href="#">11:34 AM 7/17/2024</a></li>    
+    <li><a href="#">11:34 AM 7/17/2024</a></li>
+    <li><a href="#">11:34 AM 7/17/2024</a></li>
+    <li><a href="#">11:34 AM 7/17/2024</a></li>
   </ul>
 </div>
-<div class="box">
-<h4>Helpful links</h4>
-  <ul>
-    <li><a href="./Glossary.html">Glossary</li>
-    <li><a href="./world background.html">World > Background</li>
-    <li><a href="./job board.html">Job Board</li>
+<div class="box">Helpful links
+  <ul style="list-style-type: none">
+    <li>Platinum</li>
+    <li>Gold</li>
+    <li>Electrum</li>
+    <li>Silver</li>
+    <li>Copper</li>
   </ul>
+</div>
 </div>
 </body>
 </html>
