--- a/Campaign main page.html
+++ b/Campaign main page.html
@@ -15,11 +15,11 @@
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">World</a>
       <div class="dropdown-content">
-        <a href="#">Background</a>
-        <a href="#">Culture</a>
-        <a href="#">History</a>
-        <a href="#">Lore</a>
-        <a href="#">Map</a>
+        <a href="./world background.html">Background</a>
+        <a href="./world culture.html">Culture</a>
+        <a href="./world history.html">History</a>
+        <a href="./world lore.html">Lore</a>
+        <a href="./world map.html">Map</a>
       </div>
     </li>
   <li class="dropdown">
@@ -32,7 +32,7 @@
         <a href="https://www.dndbeyond.com/characters/128274718/builder"target="_blank">Lance</a>
       </div>
     </li>
-    <li><a href="./Notebook.html">Notebook</a></li>
+    <li><a href="./Adventuring Pack.html">Addventuring Pack</a></li>
     <li><a href="./Job Board.html">Job Board</a></li>
     <li><a href="./Glossary.html">Glossary</a></li>
   </ul>
