--- a/world history.html
+++ b/world history.html
@@ -1,5 +1,41 @@
-<html>
+<!DOCTYPE html>
+<html lang="en-US">
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
+  <title>Sorcery Schism</title>
+  <link rel="icon" type="image/x-icon" href="./sorcery schism icon.jpg">
+  <link rel="stylesheet" href="./Campaign%20Styles.css" type="text/css">
+</head>
 
-<h1>History</h1>
+
+<body>
+<ul class="a">
+  <li><a href="#">Home</a></li>
+  <li class="dropdown">
+    <a href="javascript:void(0)" class="dropbtn">World</a>
+      <div class="dropdown-content">
+        <a href="./world background.html">Background</a>
+        <a href="./world culture.html">Culture</a>
+        <a href="./world history.html">History</a>
+        <a href="./world lore.html">Lore</a>
+        <a href="./world map.html">Map</a>
+      </div>
+    </li>
+  <li class="dropdown">
+    <a href="javascript:void(0)" class="dropbtn">Party</a>
+      <div class="dropdown-content">
+        <a href="https://www.dndbeyond.com/characters/92756884" target="_blank">AJ</a>
+        <a href="https://www.dndbeyond.com/characters/90103582"target="_blank">Dan</a>
+        <a href="https://www.dndbeyond.com/characters/98863520"target="_blank">Jared</a>
+        <a href="https://www.dndbeyond.com/characters/91149633"target="_blank">Jimmy</a>
+        <a href="https://www.dndbeyond.com/characters/128274718/builder"target="_blank">Lance</a>
+      </div>
+    </li>
+    <li><a href="./Adventuring Pack.html">Addventuring Pack</a></li>
+    <li><a href="./Job Board.html">Job Board</a></li>
+    <li><a href="./Glossary.html">Glossary</a></li>
+  </ul>
+</body>
 
 </html>
