--- a/index.html
+++ b/index.html
@@ -1,3 +1,74 @@
-<head>
+<!--<head>
 <meta http-equiv='refresh' content='0; URL=./Campaign main page.html'>
+</head>-->
+<!DOCTYPE html>
+<html lang="en-US">
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
+  <title>????????????</title>
+  <link rel="icon" type="image/x-icon" href="./sorcery schism icon.jpg">
+  <link rel="stylesheet" href="./Campaign%20Styles.css" type="text/css">
 </head>
+
+
+<body>
+<ul class="a">
+  <li><a href="#">Home</a></li>
+  <li class="dropdown">
+    <a href="javascript:void(0)" class="dropbtn">World</a>
+      <div class="dropdown-content">
+        <a href="./world background.html">Background</a>
+        <a href="./world culture.html">Culture</a>
+        <a href="./world history.html">History</a>
+        <a href="./world lore.html">Lore</a>
+        <a href="./world map.html">Map</a>
+      </div>
+    </li>
+  <li class="dropdown">
+    <a href="javascript:void(0)" class="dropbtn">Party</a>
+      <div class="dropdown-content">
+        <a href="https://www.dndbeyond.com/characters/92756884" target="_blank">AJ</a>
+        <a href="https://www.dndbeyond.com/characters/90103582"target="_blank">Dan</a>
+        <a href="https://www.dndbeyond.com/characters/98863520"target="_blank">Jared</a>
+        <a href="https://www.dndbeyond.com/characters/91149633"target="_blank">Jimmy</a>
+        <a href="https://www.dndbeyond.com/characters/128274718/builder"target="_blank">Lance</a>
+      </div>
+    </li>
+    <li><a href="./Adventuring Pack.html">Addventuring Pack</a></li>
+    <li><a href="./Job Board.html">Job Board</a></li>
+    <li><a href="./Glossary.html">Glossary</a></li>
+  </ul>
+
+<h2>The Story...</h2>
+
+<div class="story">
+<p style="font-size: 36px;"> Coming soon to a D&D campaign near you....</p>
+</div>
+
+<div class="boxcontainer">
+<div class="box">Announcements
+  <ul class="b">
+    <li>Next Session: 10:41 AM 7/15/2024</li>
+    <li>Jimmy is a nerd</li>
+    <li>The world is ending</li>
+  </ul>
+</div>
+
+<div class="box">Things to Remember
+  <ul class="b">
+    <li>Next session 10:43 AM 7/15/2024</li>
+    <li>Jimmy is a nerd</li>
+    <li>the world is ending</li>
+  </ul>
+</div>
+</div>
+
+<div class="stats">Stats for nerds</div>
+
+</body>
+
+<footer style="color: white; text-slign: center">Questions? Concerns? Issues? Contact me at <a style="color: crimson" href="mailto: juseipel43@gmail.com">juseipel43@gmail.com</a>
+</footer>
+
+</html>
