--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
-<!--<head>
-<meta http-equiv='refresh' content='0; URL=./Campaign main page.html'>
-</head>-->
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
-  <title>????????????</title>
+  <title>Sorcery Schism</title>
   <link rel="icon" type="image/x-icon" href="./sorcery schism icon.jpg">
   <link rel="stylesheet" href="./Campaign%20Styles.css" type="text/css">
 </head>
@@ -43,7 +40,11 @@
 <h2>The Story...</h2>
 
 <div class="story">
-<p style="font-size: 36px;"> Coming soon to a D&D campaign near you....</p>
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Bibendum neque egestas congue quisque egestas diam in arcu. Risus quis varius quam quisque. Enim eu turpis egestas pretium aenean pharetra magna. Curabitur vitae nunc sed velit dignissim sodales ut eu. Sagittis nisl rhoncus mattis rhoncus. Dignissim sodales ut eu sem integer vitae justo eget magna. Iaculis nunc sed augue lacus viverra vitae congue eu consequat. Consectetur adipiscing elit pellentesque habitant morbi tristique senectus et. Et leo duis ut diam quam nulla porttitor massa. Sed ullamcorper morbi tincidunt ornare massa eget egestas. Eleifend donec pretium vulputate sapien nec sagittis aliquam. Adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus. At quis risus sed vulputate odio ut enim blandit. Justo donec enim diam vulputate ut pharetra. Urna nec tincidunt praesent semper feugiat nibh sed.
+<br><br>
+Velit euismod in pellentesque massa placerat duis. Non tellus orci ac auctor augue mauris augue. Augue eget arcu dictum varius. Ac auctor augue mauris augue. Ullamcorper sit amet risus nullam eget felis eget. Odio ut sem nulla pharetra diam sit amet nisl suscipit. Accumsan sit amet nulla facilisi. Egestas diam in arcu cursus euismod quis viverra nibh. Mattis rhoncus urna neque viverra justo nec ultrices. Convallis convallis tellus id interdum velit laoreet. Nulla facilisi nullam vehicula ipsum a arcu. Odio ut sem nulla pharetra diam sit amet nisl suscipit.
+<br><br>
+Lacus suspendisse faucibus interdum posuere lorem ipsum dolor sit amet. Viverra aliquet eget sit amet tellus cras adipiscing. Id velit ut tortor pretium viverra suspendisse potenti. Sagittis orci a scelerisque purus semper eget duis at tellus. Neque vitae tempus quam pellentesque nec nam aliquam sem. Convallis aenean et tortor at risus viverra. Vitae justo eget magna fermentum iaculis eu. Sagittis vitae et leo duis ut diam quam nulla porttitor. Dictum fusce ut placerat orci nulla pellentesque dignissim enim sit. Malesuada fames ac turpis egestas integer eget. Convallis posuere morbi leo urna molestie at elementum eu. Porttitor eget dolor morbi non arcu risus quis. Consequat semper viverra nam libero justo. Turpis egestas sed tempus urna et pharetra pharetra massa. Fames ac turpis egestas sed tempus urna et pharetra. Diam volutpat commodo sed egestas egestas fringilla phasellus faucibus scelerisque. Cursus vitae congue mauris rhoncus aenean vel. Fermentum posuere urna nec tincidunt praesent semper feugiat nibh. Quis enim lobortis scelerisque fermentum dui faucibus in ornare. Integer quis auctor elit sed vulputate mi sit amet mauris.
 </div>
 
 <div class="boxcontainer">
