Comments on Style sheet

--- a/Job Board.html
+++ b/Job Board.html
@@ -38,6 +38,12 @@
   </ul>
 <h1>Job Board</h1>
 
+<div class="boxcontainer">
+  <div class="box">
+    <ul>
+      <li>Here is a list of the jobs that are available</li>
+      <li>The pay should be listed for each job</li>
+      <li>Sometimes it should be a bit more shady</li>
 <ul>
   <li>Jobs available with date and pay</li>
   <li>rumors</li>
