--- a/world background.html
+++ b/world background.html
@@ -37,6 +37,7 @@
     <li><a href="./Glossary.html">Glossary</a></li>
   </ul>
 
+  <div class="largeboxcontainer">
   <div class="largebox">
     <h3>The Where</h3>
     <p>This campaign is taking place in the same universe as Jimmy's campaign.  This is one of the very little known or possibly unknown continent out in the ocean.  There is next to no knowledge about the other land masses.  There is a oceanic phenomenon that makes it difficult to travel past a certain point. It is believed that there is some kind of supernatural interference that is keeping them on this landmass.  Some think that this means the entire world is just this singular landmass, similar to how some people buy into a flat earth conspiracy. However, there are a couple of crazy individuals who say they have been to other areas of the world and they were sent here as punishment. </p>
@@ -60,5 +61,7 @@
   <div class="largebox">
     <h3>The How</h3>
     <p>This is the story yet to be told. Write your story adventurers...</p>
+  </div>
+  </div>
 </body>
 </html>
