Several changes to several pages

--- a/Adventuring Pack.html
+++ b/Adventuring Pack.html
@@ -48,7 +48,7 @@
   <li>link to a help page</li>
 </ul>
 
-
+<div class="boxcontainer">
 <div class="box">Loot
   <ul style="list-style-type: none">
     <li>Platinum</li>
@@ -68,14 +68,19 @@
     <li>and value(s)</li>
   </ul>
 </div>
+</div>
 
-<label for="journalentry">Journal Entry: </label>
-<br>
-<textarea class="journal" id="journalentry" name="journalentry" rows="8" cols="150" placeholder="Adventurer... enter your tales of greatness here...">
+<iframe src="https://www.dndbeyond.com/characters/77843044?abovevtt=true" title="AJ's Character" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<label for="journalentry" style="margin-left: 60px;">Journal Entry: </label>
+
+<textarea style="margin-left: 60px;" class="journal" id="journalentry" name="journalentry" rows="8" cols="100" placeholder="Adventurer... enter your tales of greatness here...">
 </textarea><br>
-<button id="submit">Submit your notes</button>	
 
-<br>
+<button style="margin-left: 60px;" id="submit">Submit your notes</button>	
+
+<div class="boxcontainer">
 
 <div class="box">Previous Entries
   <ul style="list-style-type: none">
@@ -96,5 +101,8 @@
   </ul>
 </div>
 </div>
+</div>
 </body>
+<footer>Questions? Concerns? Issues? Contact me at <a style="color: crimson" href="mailto: juseipel43@gmail.com">juseipel43@gmail.com</a>
+</footer>
 </html>
