--- a/Campaign main page.html
+++ b/Campaign main page.html
@@ -10,6 +10,7 @@
 
 
 <body>
+
 <ul class="a">
   <li><a href="#">Home</a></li>
   <li class="dropdown">
@@ -37,7 +38,7 @@
     <li><a href="./Glossary.html">Glossary</a></li>
   </ul>
 
-<h2>The Story...</h2>
+<h1>The Story...</h1>
 
 <div class="story">
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Bibendum neque egestas congue quisque egestas diam in arcu. Risus quis varius quam quisque. Enim eu turpis egestas pretium aenean pharetra magna. Curabitur vitae nunc sed velit dignissim sodales ut eu. Sagittis nisl rhoncus mattis rhoncus. Dignissim sodales ut eu sem integer vitae justo eget magna. Iaculis nunc sed augue lacus viverra vitae congue eu consequat. Consectetur adipiscing elit pellentesque habitant morbi tristique senectus et. Et leo duis ut diam quam nulla porttitor massa. Sed ullamcorper morbi tincidunt ornare massa eget egestas. Eleifend donec pretium vulputate sapien nec sagittis aliquam. Adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus. At quis risus sed vulputate odio ut enim blandit. Justo donec enim diam vulputate ut pharetra. Urna nec tincidunt praesent semper feugiat nibh sed.
@@ -48,7 +49,7 @@ Lacus suspendisse faucibus interdum posuere lorem ipsum dolor sit amet. Viverra 
 </div>
 
 <div class="boxcontainer">
-<div class="box">Announcements
+<div class="box"><h3>Announcements</h3>
   <ul class="b">
     <li>Next Session: 10:41 AM 7/15/2024</li>
     <li>Jimmy is a nerd</li>
@@ -56,7 +57,7 @@ Lacus suspendisse faucibus interdum posuere lorem ipsum dolor sit amet. Viverra 
   </ul>
 </div>
 
-<div class="box">Things to Remember
+<div class="box"><h3>Things to Remember</h3>
   <ul class="b">
     <li>Next session 10:43 AM 7/15/2024</li>
     <li>Jimmy is a nerd</li>
@@ -65,11 +66,36 @@ Lacus suspendisse faucibus interdum posuere lorem ipsum dolor sit amet. Viverra 
 </div>
 </div>
 
-<div class="stats">Stats for nerds</div>
+
+<div class="stats">
+<h3>Stats for nerds</h3>
+
+  <div class="statsbox">
+    <ul>
+      <li>Natural 20s: </li>
+      <li>Natural 1s: </li>
+      <li>Most Damage: </li>
+      <li>Most Damage Taken: </li>
+      <li>Least Damage: </li>
+      <li>Least Damage Taken: </li>
+  </div>     
+
+  <div class="statsbox"> <ul>
+<li>Killshots: 
+      <ul>
+        <li>AJ: </li>
+        <li>Dan: </li>
+        <li>Jared: </li>
+        <li>Jimmy: </li>
+        <li>Lance: </li> </ul></ul>
+  </div>
+</div>
+
 
 </body>
 
-<footer style="color: white; text-slign: center">Questions? Concerns? Issues? Contact me at <a style="color: crimson" href="mailto: juseipel43@gmail.com">juseipel43@gmail.com</a>
+<footer>Questions? Concerns? Issues? Contact me at <a style="color: crimson" href="mailto: juseipel43@gmail.com">juseipel43@gmail.com</a>
 </footer>
+
 
 </html>
