--- a/Job Board.html
+++ b/Job Board.html
@@ -51,6 +51,12 @@
   <li>advertisements</li>
   <li>poss pics of the notes</li>
 </ul>
+</div>
 
+  <div class="box">Rumors</div>
+  <div class="box">Headlines from the town crier</div>
+  <div class="box">Advertisements</div>
+  <div class="box">Sundries</div>
+</div>
 </body>
 </html>
